--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "node --watch src/index.js",
     "start": "node src/index.js"
   },
   "keywords": [],
