--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
+    "axios": "^1.12.1",
     "bootstrap": "^5.3.7",
     "bootswatch": "^5.3.7",
     "jwt-decode": "^4.0.0",
