--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
