add map at propertyview

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "bootstrap": "^5.3.7",
     "bootswatch": "^5.3.7",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.8.2",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
